--- a/public/AboutUs.html
+++ b/public/AboutUs.html
@@ -1,20 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Arioso-Cafe ☕️ About Us</title>
-	<link rel="stylesheet" href="./styles/index.css">
-	<link rel="stylesheet" href="./styles/AboutUs.css">
-	<script src="https://kit.fontawesome.com/347082258b.js"></script>
-</head>
-<body>
-	<h1>About Us</h1>
-	<a href="./index.html">Home</a>
-	<a href="./AboutUs.html">About Us</a>
-	<a href="./Contact.html">Contact</a>
-
-	<link rel="stylesheet" href="./styles/index.css">
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Arioso-Cafe ☕️ About Us</title>
+    <link rel="stylesheet" href="./styles/o.css" />
+    <link rel="stylesheet" href="./styles/AboutUs.css" />
+  </head>
+  <body>
+    <main>
+      <img src="./Assets/Roasting.jpg" />
+      <section>
+        <p>
+          Arioso Cafe is a small roaster based in Vancouver, Canada. The Chief
+          Roaster, Don Parkhurst has been small batch roasting for family,
+          friends as well as for his own personal enjoyment, for almost 20
+          years.
+        </p>
+        <p>
+          Don’s other job as an airline pilot for the last 30 years, has had him
+          travelling around the world and enjoying espresso at some of the
+          finest coffee houses on the planet. Aside from enjoying the
+          hand-crafted espresso drinks at some excellent cafes, it also inspires
+          and drives him to create the finest roast possible whether it is for
+          our own unique espresso blend (Bossa Nova Espresso) or any of our
+          single origin coffees.
+        </p>
+        <p>
+          At Arioso we only buy select small lots of fair trade/fair trade
+          organic beans, which has allowed us to keep the highest possible
+          quality in our roasts and to ensure a fair return for the great
+          product grown by these farmers.
+        </p>
+      </section>
+    </main>
+  </body>
 </html>
