--- a/public/index.html
+++ b/public/index.html
@@ -21,15 +21,9 @@
     </script>
   </head>
   <body>
-    <!-- <div class="text">
-      <h1>Arioso-Cafe</h1>
+    <main class="data">
+      <img src="./Assets/Logo_SVG.svg" class="logo" />
       <h2>Coming Soon...</h2>
-    </div> -->
-    <main>
-      <section>
-        <img src="./Assets/Logo_SVG.svg" class="logo" />
-        <h2>Coming Soon...</h2>
-      </section>
     </main>
   </body>
 </html>
