--- a/public/404.html
+++ b/public/404.html
@@ -20,7 +20,7 @@
         body { border-top: 16px solid #ffa100; }
       }
     </style>
-  </head>
+  </head
   <body>
     <div id="message">
       <h2>404</h2>
