About Us with Image Fix

--- a/public/o2.html
+++ b/public/o2.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Arioso Cafe - Home</title>
-  <link rel="stylesheet" href="./styles/o2.css">
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Arioso Cafe - Home</title>
+    <link rel="stylesheet" href="./styles/o2.css" />
+  </head>
+  <body>
+    <nav class="nav">
+      <a href="./o.html"><img src="./Assets/Logo_SVG.svg" class="logo"/></a>
+      <ul class="nav-bar">
+        <li><a href="./o.html" class="nav-selected">Home</a></li>
+        <li><a href="./">Beans</a></li>
+        <li><a href="./">Bossa Nova Espresso</a></li>
+        <li><a href="./">About Us</a></li>
+        <li><a href="./">Contact</a></li>
+      </ul>
+    </nav>
+    <main class="main-block">
+      <div class="row-block">
+        <section class="section-block">
+          <h1>Bossa Nova Espresso</h1>
+          <ul>
+            <li>Medium Roast Espresso</li>
+            <li>Full Bodied. Carmel. Nutty. Balanced.</li>
+            <li><span class="bold">Source:</span> South & Central America</li>
+          </ul>
+          <a href="./Beans/BossaNovaEspresso.html"
+            ><button class="bg-primary">More</button></a
+          >
+          <div id="paypal-button-container"></div>
+        </section>
+        <div>
+          <img
+            src="https://firebasestorage.googleapis.com/v0/b/arioso-cafe.appspot.com/o/Media%2FBosaNova_Optimized.jpg?alt=media&token=65576416-8ba4-4716-ae5e-f3e9d7188fe0"
+          />
+        </div>
+      </div>
+      <div class="section-hero"></div>
+    </main>
+  </body>
 </html>
