--- a/public/AboutUs.html
+++ b/public/AboutUs.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Arioso-Cafe ☕️ About Us</title>
-    <link rel="stylesheet" href="./styles/o.css" />
+    <link rel="stylesheet" href="./styles/o2.css" />
     <link rel="stylesheet" href="./styles/AboutUs.css" />
   </head>
-  <body>
+  <body class="main-block">
     <main>
       <img src="./Assets/Roasting.jpg" />
       <section>
